fix(dropdown): unset top, z-index, min-width

--- a/src/patternfly/components/ContextSelector/context-selector.scss
+++ b/src/patternfly/components/ContextSelector/context-selector.scss
@@ -302,6 +302,9 @@
   &:only-child,
   &.pf-m-static {
     position: static;
+    top: auto;
+    z-index: auto;
+    min-width: auto;
   }
 }
 
